change(swagger): changing the swagger documentation
